--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,6 +6,11 @@
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"/>
     <item
+        android:id="@+id/library"
+        android:enabled="true"
+        android:icon="@drawable/baseline_library_books_24"
+        android:title="Library"/>
+    <item
         android:id="@+id/list"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_checklist_24"
