--- a/app/src/main/res/layout/document_list_item.xml
+++ b/app/src/main/res/layout/document_list_item.xml
@@ -7,6 +7,7 @@
     android:layout_margin="24px">
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/li_document_card"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:checkable="true"
@@ -51,6 +52,7 @@
                 android:textColor="?android:attr/textColorSecondary"
                 app:layout_constraintBottom_toTopOf="@+id/document_creation_tv"
                 app:layout_constraintStart_toStartOf="@+id/document_subject_tv" />
+
             <TextView
                 android:id="@+id/document_creation_tv"
                 android:layout_width="wrap_content"
