--- a/app/src/main/res/layout/activity_ereader.xml
+++ b/app/src/main/res/layout/activity_ereader.xml
@@ -44,9 +44,7 @@
         app:layout_constraintBottom_toTopOf="@+id/pageNumberTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </com.github.barteksc.pdfviewer.PDFView>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
