--- a/app/src/main/res/layout/document_list_item.xml
+++ b/app/src/main/res/layout/document_list_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="24px">
+    android:layout_margin="16dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/li_document_card"
@@ -13,6 +13,7 @@
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
+        app:cardBackgroundColor="#43000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,45 +25,62 @@
 
             <TextView
                 android:id="@+id/document_title_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text="Bad Blood"
+                android:fontFamily="@font/apercu_pro_bold"
+                android:layout_marginEnd="16dp"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
+                android:textColor="#FFFFFF"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/document_subject_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                app:fontFamily="@font/apercu_pro_regular"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
-                app:layout_constraintStart_toStartOf="@+id/document_title_tv"
-                app:layout_constraintTop_toBottomOf="@+id/document_title_tv" />
+                android:textColor="#E4E1E1"
+                app:layout_constraintBottom_toTopOf="@+id/document_author_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/document_title_tv"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/document_author_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                app:fontFamily="@font/apercu_pro_regular"
+                android:layout_marginEnd="16dp"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
+                android:textColor="#E4E1E1"
                 app:layout_constraintBottom_toTopOf="@+id/document_creation_tv"
-                app:layout_constraintStart_toStartOf="@+id/document_subject_tv" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/document_creation_tv"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Creation Date: "
+                app:fontFamily="@font/apercu_pro_regular"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
+                android:textColor="#E4E1E1"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/document_subject_tv" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
